[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = "1.4.0"
num-bigint = { version = "0.4", optional = true}
num-traits = { version = "0.2", optional = true}
rand = "0.8"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[feature]
default = ["big-math"]
big-math = ["dep:num-bigint", "dep:num-traits"]

