[package]
name = "netcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
femme = "2.2.1"
log = "0.4.20"
r3bl_ansi_color = "0.6.9"
r3bl_tui = "0.5.1"
